# hello-mcp

./: .gitignore  README.md  hello-mcp.sln
.github/: README.md  dependabot.yml
.github/workflows/: auto-merge.yml  auto-rebase.yml  ci.yml  dependency-updates.yml
doc/: hello-mcp-java-flow.md  hello-mcp-kotlin-flow.md
hello-mcp-csharp/: .gitignore  HelloMCP.csproj  McpClient.cs  McpClientApplication.cs  McpServer.cs  McpServerApplication.cs  PeriodicTable.cs  PeriodicTableTests.cs  Program.cs  README.md  hello-mcp.sln  run.cmd  run.ps1  run.sh
hello-mcp-csharp/mcp-client/: HelloClient.cs  OllamaClient.cs  TestClient.cs  TestClient.csproj  TestOllama.cs  TestOllama.csproj
hello-mcp-csharp/mcp-server/: McpServer.csproj  PeriodicTable.cs  PeriodicTableTools.cs  Program.cs
hello-mcp-go/: README.md
hello-mcp-go/mcp-client/: .gitignore  client.go  go.mod  main.go  ollama_client.go  test_client.go  test_ollama.go  test_python_server.go
hello-mcp-go/mcp-server/: .gitignore  go.mod  periodic_table.go  server.go
hello-mcp-java/: .gitignore  README.md  pom.xml  start-server.cmd  start-server.ps1
hello-mcp-java/mcp-client/: Periodic_table.md  pom.xml  run.sh
hello-mcp-java/mcp-server/: pom.xml
hello-mcp-kotlin/: .gitignore  Periodic_table.md  README.md  build.gradle.kts  build.sh  gradle.properties  run.sh  settings.gradle.kts  test-sdk.kt
hello-mcp-kotlin/mcp-client/: build.gradle.kts
hello-mcp-kotlin/mcp-server/: build.gradle.kts
hello-mcp-php/: README.md
hello-mcp-python/: README.md  requirements.in  requirements.txt  run.sh
hello-mcp-python/mcp-client/: client.py  ollama_client.py  pyproject.toml  test_client.py  test_ollama.py
hello-mcp-python/mcp-server/: periodic_table.py  pyproject.toml  server.py
hello-mcp-python/src/: client.py  demo.py  http_client.py  http_server.py  periodic_table.py  server.py
hello-mcp-python/tests/: test_periodic_table.py
hello-mcp-rust/: Cargo.toml  README.md  run-test.ps1  run.sh
hello-mcp-rust/mcp-client/: Cargo.toml  client.rs  ollama_client.rs  test_client.rs  test_ollama.rs
hello-mcp-rust/mcp-server/: Cargo.toml  periodic_table.rs  server.rs
hello-mcp-rust/src/: client.rs  lib.rs  periodic_table.rs  server.rs
hello-mcp-swift/: Package.swift  README.md  run.sh  test-mcp.sh
hello-mcp-swift/Sources/HelloMCPClient/: main.swift
hello-mcp-swift/Sources/HelloMCPCore/: PeriodicTable.swift
hello-mcp-swift/Sources/HelloMCPServer/: main.swift
hello-mcp-swift/Tests/HelloMCPTests/: PeriodicTableTests.swift
hello-mcp-swift/mcp-client/: Package.swift  README.md
hello-mcp-swift/mcp-client/Sources/Client/: HelloClient.swift  OllamaClient.swift
hello-mcp-swift/mcp-client/Sources/TestClient/: main.swift
hello-mcp-swift/mcp-server/: .gitignore  Package.swift  README.md
hello-mcp-swift/mcp-server/Sources/: HTTPServerTransport.swift  PeriodicTable.swift  Server.swift
hello-mcp-ts/: README.md  jest.config.json  package-lock.json  package.json  run.sh  tsconfig.json
hello-mcp-ts/mcp-client/: README.md  client.ts  ollama_client.ts  package-lock.json  package.json  test_client.ts  test_ollama.ts  tsconfig.json
hello-mcp-ts/mcp-server/: package-lock.json  package.json  periodic_table.ts  server.ts
hello-mcp-ts/src/: client.ts  periodic-table.test.ts  periodic-table.ts  server-new.ts  server.ts
(+45 files in other folders)
