[package]
name = "hello-mcp-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mcp-sdk = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
