[project]
name = "mcp-client"
version = "0.1.0"
description = "A simple MCP client with Ollama integration"
requires-python = ">=3.10"
authors = [{ name = "feuyeux" }]
keywords = ["mcp", "llm", "automation", "web", "fetch", "http", "streamable"]
dependencies = [
    "anyio>=4.5",
    "click>=8.2.0",
    "httpx>=0.27",
    "mcp>=1.18.0",
    "starlette",
    "uvicorn",
]

[project.scripts]
test-client = "test_client:main"
test-ollama = "test_ollama:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
target-version = "py310"

[dependency-groups]
dev = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9"]
