[package]
name = "mcp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "0.8.2", features = ["client"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "test_client"
path = "test_client.rs"

[[bin]]
name = "test_ollama"
path = "test_ollama.rs"
